# ShiroUI

./: cuda_malloc.py  execution.py  latent_preview.py  main.py  new_updater.py  node_helpers.py  nodes.py  requirements.txt  server.py
app/: app_settings.py  frontend_management.py  user_manager.py
custom_nodes/: __init__.py  index.html  websocket_image_save.py
custom_nodes/ShiroUI-to-Python-Extension/: __init__.py  pyproject.toml  shiroui_to_python.py  shiroui_to_python_utils.py
custom_nodes/ShiroUI-to-Python-Extension/js/: save-as-script.js
shiro/: cli_args.py  clip_model.py  clip_vision.py  conds.py  controlnet.py  diffusers_load.py  gligen.py  lora.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_sampling.py  ops.py  sample.py  sampler_helpers.py  samplers.py  sd.py  sd1_clip.py  sdxl_clip.py  shiro_types.py  supported_models.py  supported_models_base.py  utils.py
shiro_execution/: caching.py  graph.py  graph_utils.py
shiro_extras/: nodes_advanced_samplers.py  nodes_audio.py  nodes_canny.py  nodes_compositing.py  nodes_controlnet.py  nodes_custom_sampler.py  nodes_hypernetwork.py  nodes_images.py  nodes_latent.py  nodes_lora_extract.py  nodes_mask.py  nodes_mochi.py  nodes_model_advanced.py  nodes_model_downscale.py  nodes_model_merging.py  nodes_model_merging_model_specific.py  nodes_morphology.py  nodes_pag.py  nodes_perpneg.py  nodes_photomaker.py  nodes_post_processing.py  nodes_sag.py  nodes_sd3.py  nodes_sdupscale.py  nodes_stable3d.py  nodes_stable_cascade.py  nodes_upscale_model.py  nodes_video_model.py
(+57 files in other folders)
